# cxr-triage

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
configs/: backend.example.json
docs/: ARTIFACTS.md  BACKEND_PLAN.md  MODEL_CARD.md  MVP_REPORT.md  PLAN_COMPLETION_AUDIT.md  RESEARCH_REPRODUCIBILITY.md  UI_REVIEW_SPEC.md  technical_plan_v04.md
examples/: demo_scores_auto_negative.json  demo_scores_manual_review.json
model_bundle/: manifest.json  preprocessing_config.json
model_bundle/reports/: chexfound_candidate_fixed_final.csv  eva_last1_candidate_fixed_metrics.csv  final_safe_from_validation_candidates.csv  input_scores_final_test.csv  input_scores_validation.csv  mass_router_meta_analysis_report.md  mass_router_meta_analysis_summary_ru.md  router_blocker_summary_final_test.csv  selected_mass_router_config.json  selected_routes_final_test.csv  selected_routes_validation.csv  target_review_candidates.csv  target_review_scenarios.csv
reports/real_data_parity/: real_data_parity_sample.csv  real_data_parity_summary.json
research/: manifest.json
research/notebooks/: fluoro_mvp_model_selection.ipynb  fluoro_mvp_ranking_closure.ipynb  fluoro_mvp_single_notebook.ipynb  fluoro_mvp_vindr_interpretation.ipynb
runtime/: README.md
tests/: test_api.py  test_artifact_integrity.py  test_cli.py  test_preprocessing.py  test_research_manifest.py  test_router_research_drift.py  test_storage_active_learning.py
tools/: fresh_env_smoke.py  image_inference_smoke.py  init_db.py  pack_model_artifacts.py  real_data_parity_smoke.py
(+33 files in other folders)
