[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluoro-mvp-delivery"
version = "0.1.0"
description = "Backend-ready delivery package for the FLG/CXR MVP model candidate."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pillow>=10.0",
  "scikit-learn==1.6.1",
  "joblib>=1.3",
  "safetensors>=0.4",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]
image = [
  "torch>=2.1",
  "timm==0.9.0",
  "fvcore>=0.1.5",
  "iopath>=0.1.10",
  "omegaconf>=2.3",
  "pydicom>=2.4",
]
dev = ["pytest>=8.0"]

[project.scripts]
fluoro-mvp-infer = "fluoro_mvp_backend.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
